[package]
name = "async_reqwest"
version = "0.1.0"
authors = ["Alexander Gusain <alex.gusain@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
#anyhow = "1.0"
yew = { path = "../../packages/yew" }
gloo-utils = "0.1"
#serde_json = "1.0.67"
reqwest = { version = "0.11.4", features=["json"] }